--- a/nginx.conf
+++ b/nginx.conf
@@ -13,9 +13,12 @@ http {
     }
 
     server {
-        listen 8080;
+        listen 443 ssl;
         server_name localhost;
 
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        
         location / {
             proxy_pass http://nodejs_cluster;
             proxy_set_header Host $host;
